--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,17 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<div class="container">
+  <div class="panel panel-default">
+  <div class="panel-heading"><h3><%= @article.title %></h3></div>
+  <div class="panel-body"><%= @article.text %></div>
+</div>
 
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
 
 <h2>Comments</h2>
+<div class="well">
 <%= render @article.comments %>
-
+</div>
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+</div>
