--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,23 @@
-<h1>Listing Articles</h1>
-<%= link_to 'New article', new_article_path %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th colspan="3"></th>
-  </tr>
 
-  <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %> | </td>
-      <td><%= link_to 'Edit', edit_article_path(article) %> | </td>
-      <td><%= link_to 'Destroy', article_path(article),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-</table>
+<h1 style="text-align:center">Posts</h1>
+<%= link_to 'New article', new_article_path,:class => "btn btn-primary" %>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Title</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+      <tr>
+        <td><%= article.title %></td>
+        <td><%= link_to 'Show', article_path(article),:class => "btn btn-info"  %></td>
+        <td><%= link_to 'Edit', edit_article_path(article),:class => "btn btn-warning"  %></td>
+        <td><%= button_to 'Destroy', article_path(article),
+                method: :delete,
+                data: { confirm: 'Are you sure?' } ,:class => "btn btn-danger" %>
+              </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
