--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,20 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">BlogSite</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Home', controller: 'welcome' %></li>
+        <li><%= link_to 'Posts', controller: 'articles' %></li>
+      </ul>
+    </div>
+  </nav>
   <body>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
