--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,10 @@
 
-<h1>Hello, Rails!</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+<div class="jumbotron" style="text-align:center">
+  <h1>
+  🚧⛏️
+  </h1>
+    <h1>BlogSite</h1>
+    <p>Currently under development. You can still post and comment on existing posts.</p>
+  </div>
+  <p>Username: nitinadmin</p>
+  <p>Password: password0</p>
